--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
+      "src/**/*.{js,jsx,mjs}",
+      "!src/**/index.js"
     ],
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
