--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,mjs}",
-      "!src/**/index.js"
+      "!src/**/index.js",
+      "!src/tests/**"
     ],
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
