--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: node_js
 
 # Lock compatible node versions
 node_js:
-  - "node"
   - "9"
   - "8"
 
@@ -37,5 +36,5 @@ deploy:
   on:
     repo: twitchdev/developer-rig
     branch: master
-    node_js: "node"
+    node_js: "9"
     tags: true
