--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dev-rig",
+  "engines" : { "node" : "<=9.11.1" },
   "version": "0.1.1",
   "private": true,
   "repository": "github:twitchdev/developer-rig",
@@ -31,7 +32,7 @@
     "http-server": "^0.11.1",
     "jest": "20.0.4",
     "jsonwebtoken": "^8.2.0",
-    "nodegit": "^0.21.1",
+    "nodegit": "^0.22.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
