--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "2.0.0-next.66cc7a90",
+    "react-scripts": "^1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "2.2.0",
     "selfsigned": "^1.10.2",
