Update installation and configuration on Mac and Windows (#124)
* Check for appropriate version of node on Windows

* Check the installation configuration on Windows

* Name the extension "Hello World Panel Extension"

* Modify the elevation mechanism

* Create a script to keep failed windows open

* Add a note about scripts in Windows

* Correct Stack Overflow references

* Use a custom option parser

The built-in getopt command doesn't handle spaces properly.

* Check for appropriate version of node on Mac

* Correct certificate problems with Chrome on Mac

* Remove yarn ssl mechanisms

* Update documentation and rig references

* Add a script to delete certificates on Mac

--- a/scripts/openssl-server.cnf
+++ b/scripts/openssl-server.cnf
@@ -1,5 +1,5 @@
 # https://stackoverflow.com/questions/10175812/how-to-create-a-self-signed-certificate-with-openssl
-# https://stackoverflow.com/questions/21297139/how-do-you-sign-a-certificate-signing-request-with-your-certification-authority/21340898
+# https://stackoverflow.com/questions/21297139/how-do-you-sign-a-certificate-signing-request-with-your-certification-authority
 HOME     = .
 RANDFILE = $ENV::HOME/.rnd
 
@@ -17,7 +17,7 @@ countryName                    = Country Name (2 letter code)
 countryName_default            = US
 
 stateOrProvinceName            = State or Province Name (full name)
-stateOrProvinceName_default    = CA
+stateOrProvinceName_default    = California
 
 localityName                   = Locality Name (eg, city)
 localityName_default           = San Francisco
@@ -29,7 +29,7 @@ organizationalUnitName         = Organizational Unit (eg, division)
 organizationalUnitName_default = Twitch Developer Rig
 
 commonName                     = Common Name (e.g. server FQDN or YOUR name)
-commonName_default             = Twitch Developer Rig CA
+commonName_default             = Twitch Developer Rig
 
 emailAddress                   = Email Address
 emailAddress_default           = twitchdev@twitch.tv
