Consolidate the multiple Extension models we're using. (#157)
* Add better types for coordinator

* Update snapshots

* Implement TwitchAPI on some api methods for more type safety

* Consolidate duplicate/redundant types

* Add userId, update userSession types

* Add tests for twitch-api.ts

* Fix broken Authorization header after rebase

* Upgrade extension-coordinator to 7.18.2

* Update tests after rebase

* Fix configuration refresh

--- a/package.json
+++ b/package.json
@@ -81,11 +81,13 @@
   },
   "devDependencies": {
     "@types/eventemitter2": "^4.1.0",
+    "@types/fetch-mock": "^6.0.3",
     "@types/react-dom": "^16.0.6",
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.4",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "fetch-mock": "^6.5.2",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
     "semantic-release": "^12.4.1",
