--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jsonwebtoken": "^7.2.8",
     "@types/react": "^16.3.16",
     "@types/react-redux": "^6.0.2",
+    "@types/react-router-dom": "^4.3.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -51,6 +52,7 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-redux": "5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "2.2.0",
